--- a/Makefile.unx
+++ b/Makefile.unx
@@ -539,7 +539,7 @@ XA_MISC_DEFS = $(XA_CMAP) $(XA_XTPTR) $(XA_SHARED) $(XA_MULTIBUF) $(XA_MACH_DEFS
 XA_DEFS = $(XA_MISC_DEFS) $(XA_MOD_DEFS) $(XA_AUDIO_DEFS) -DXA_PETUNIA -DXA_KPCD
 XA_LIBS = $(XA_X11R6_LIBS) $(XA_MACH_LIBS) $(XA_MOD_LIBS) $(XA_AUDIO_LIBS) 
 XA_INCS = $(INCLUDE) $(XA_VIDEO_INCS) $(XA_AUDIO_INCS)
-CFLAGS	=  $(DEBUG) $(OPTIMIZE)
+CFLAGS	=  $(DEBUG) $(OPTIMIZE) -Werror=knr-promoted-parameter
 
 #####################################
 # FINAL LIBS
@@ -602,36 +602,36 @@ xa1.0_kpcd.o: xa1.0_kpcd.c
 unpacker.o: unpacker.c
 xa_acodec.o: Makefile xanim.h xa_acodec.c
 xa_act.o: xanim.h xa_config.h xa_act.c
-xa_au.o: xanim.h xa_config.h xa_au.c
-xa_audio.o: Makefile xanim.h xa_config.h xa_audio.h xa_audio.c
-xa_avi.o: Makefile xanim.h xa_config.h xa_avi.h xa_codecs.h xa_xmpg.h xa_avi.c xa_cmap.h
+xa_au.o: xanim.h xa_config.h xa_formats.h xa_au.c
+xa_audio.o: Makefile xanim.h xa_config.h xa_formats.h xa_audio.h xa_audio.c
+xa_avi.o: Makefile xanim.h xa_config.h xa_avi.h xa_codecs.h xa_formats.h xa_xmpg.h xa_avi.c xa_cmap.h
 xa_cmap.o: xanim.h xa_config.h xa_cmap.c xa_cmap.h
 xa_color.o: xanim.h xa_color.c xa_cmap.h
 xa_dl.o: xanim.h xa_config.h xa_dl.h xa_dl.c
 xa_dumfx.o: xanim.h xa_dumfx.c
-xa_fli.o: xanim.h xa_config.h xa_fli.h xa_fli.c
-xa_formats.o: xanim.h xa_formats.c
-xa_gif.o: xanim.h xa_config.h xa_gif.h xa_gif.c
-xa_iff.o: xanim.h xa_config.h xa_cmap.h xa_iff.h xa_iff.c
+xa_fli.o: xanim.h xa_config.h xa_formats.h xa_fli.h xa_fli.c
+xa_formats.o: xanim.h xa_formats.h xa_formats.c
+xa_gif.o: xanim.h xa_config.h xa_formats.h xa_gif.h xa_gif.c
+xa_iff.o: xanim.h xa_config.h xa_cmap.h xa_formats.h xa_iff.h xa_iff.c
 xa_input.o: xanim.h xa_input.c
 xa_ipc.o: Makefile xanim.h xa_config.h xa_ipc.h xa_ipc.c
-xa_jmov.o: xanim.h xa_config.h xa_jmov.h xa_jmov.c
-xa_jpg.o: xanim.h xa_config.h xa_jpg.h xa_jpg.c
+xa_jmov.o: xanim.h xa_config.h xa_formats.h xa_cmap.h xa_jmov.h xa_jmov.c
+xa_jpg.o: xanim.h xa_config.h xa_xmpg.h xa_formats.h xa_jpg.h xa_jpg.c
 xa_j6i.o: xanim.h xa_j6i.h xa_j6i.c
 xa_movi.o: xanim.h xa_config.h xa_movi.h xa_movi.c xa_cmap.h
-xa_mpg.o: xanim.h xa_config.h xa_mpg.h xa_xmpg.h xa_mpg.c xa_jpg.c xa_cmap.h
-xa_qt.o: Makefile xanim.h xa_config.h xa_qt.h xa_codecs.h xa_qt.c xa_cmap.h
+xa_mpg.o: xanim.h xa_config.h xa_mpg.h xa_xmpg.h xa_formats.h xa_mpg.c xa_jpg.c xa_cmap.h
+xa_qt.o: Makefile xanim.h xa_config.h xa_qt.h xa_codecs.h xa_formats.h xa_qt.c xa_cmap.h
 xa_qt_decs.o: Makefile xanim.h xa_config.h xa_qt.h xa_qt_decs.c xa_cmap.h
 xa_vid_codec.o: Makefile xa_avi.h xa_qt.h xa_codecs.h xavid.h xavid_mod.h
 xa_vid_codec.o: xa_vid_codec.c
-xa_replay.o: xanim.h xa_config.h xa_replay.h xa_replay.c
+xa_replay.o: xanim.h xa_config.h xa_formats.h xa_replay.h xa_replay.c
 xa_rle.o: xanim.h xa_config.h xa_rle.h xa_rle.c
 xa_set.o: xanim.h xa_config.h xa_iff.h xa_iff.c xa_set.h xa_set.c
-xa_raw.o: xanim.h xa_raw.h xa_raw.c xa_cmap.h
-xa_show.o: Makefile xanim.h xa_show.c
+xa_raw.o: xanim.h xa_formats.h xa_raw.h xa_raw.c xa_cmap.h
+xa_show.o: Makefile xanim.h xa_iff.h xa_show.c
 xa_txt.o: xanim.h xa_config.h xa_txt.c
 xa_utils.o: xanim.h xa_config.h xa_utils.c
-xa_wav.o: xanim.h xa_config.h xa_avi.h xa_wav.c
-xa_8svx.o: xanim.h xa_8svx.h xa_8svx.c
+xa_wav.o: xanim.h xa_config.h xa_formats.h xa_avi.h xa_wav.c
+xa_8svx.o: xanim.h xa_formats.h xa_8svx.h xa_8svx.c
 xa_x11.o: Makefile xanim.h xa_config.h xa_cmap.h xa_x11.h xa_x11.c
-xa_gsm.o: xanim.h xa_gsm_state.h xa_gsm.h xa_gsm.c
+xa_gsm.o: xanim.h xa_gsm_state.h xa_formats.h xa_gsm.h xa_gsm.c
